<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Tech-Mark Admin</string>

    <string name="next">Next</string>

    <string name="tech_mark">TECH MARK</string>
    <string name="digi_sol">Digital Solutions</string>

    <string name="welcome">Hey Admin! Welcome to</string>

    <string name="loading">Loading</string>
    <string name="loading.">Loading.</string>
    <string name="loading..">Loading..</string>
    <string name="loading...." tools:ignore="TypographyEllipsis">Loading...</string>

    <string name="admin">Admin</string>

    <string name="employee">Employee</string>
    <string name="bde">Business Development Executive</string>
    <string name="bdm">Business Development Manager</string>
    <string name="it">IT Team</string>
    <string name="login">LOGIN WITH EMAIL</string>

    <string name="create_account">Create account</string>
    <string name="log">Login</string>
    <string name="logging" tools:ignore="TypographyEllipsis">Logging in...</string>

    <string name="mynameis">My name is</string>

    <string name="typename">Type your name</string>
    <string name="myphoneis">My phone is</string>

    <string name="typephone">Type your phone</string>
    <string name="myemailis">My email is</string>

    <string name="typeemail">Type your email</string>
    <string name="mypassis">My password is</string>

    <string name="typepass">Type your password</string>
    <string name="showpass">Show password</string>

    <string name="welcome_back">Welcome back Admin !</string>

    <string name="upload_picture">Upload your profile picture</string>

    <string name="choose_image">Choose image</string>
    <string name="done">Create account</string>
    <string name="noBDMLeads">Unassigned meetings</string>

    <string name="profile">My profile</string>

    <string name="meetingsByDate">Meetings by date</string>
    <string name="allottedBDM">Assigned BDM meetings</string>
    <string name="allStaff">All staff</string>
    <string name="signOut">Sign out</string>
    <string name="meetingDetails">MEETING DETAILS</string>
    <string name="done_deals">Done deals</string>


    // Lead details

    <string name="lead_org">Lead Business Name</string>
    <string name="lead_name">Name of lead</string>

    <string name="lead_email">Email of lead</string>
    <string name="lead_phone">Phone of lead</string>
    <string name="lead_org_address">Business address</string>
    <string name="meetingDate">Meeting date</string>

    <string name="meetingTime">Meeting time</string>
    <string name="servicesOffered">SERVICES PURCHASED</string>

    <string name="services">Services</string>
    <string name="leadCreatedBy">Business Development Executive details</string>

    <string name="bde_name">BDE name</string>

    <string name="bde_email">BDE email</string>
    <string name="bde_phone">BDE phone</string>
    <string name="assignedBDM">Assigned BDM</string>

    <string name="bdm_name">BDM name</string>
    <string name="payment_details">Payment details</string>

    <string name="mode">Mode:</string>

    <string name="payment_mode">Payment mode</string>
    <string name="totalAmount">Total amount</string>
    <string name="paidAmount">Paid amount</string>
    <string name="remainingAmount">Remaining amount</string>
    <string name="amount">9999</string>
    <string name="assign_bdm">Assign BDM</string>

    <string name="staff">Staff members</string>

    // Staff activity

    <string name="staff_member_name">Staff member name</string>
    <string name="staff_member_team">Staff member team</string>

    <string name="staff_email">Staff member email</string>

    <string name="staff_phone">Staff member phone</string>
    <string name="call">Call employee</string>

    <string name="email">Email employee</string>
    <string name="selectDate">Select date</string>

    <string name="clear">Clear date filter</string>
    <string-array name="posts">
        <item>Select your team</item>
        <item>Admin</item>
        <item>Business Development Executive</item>
        <item>Business Development Manager</item>
        <item>IT Team</item>
    </string-array>

    // Done deals

    <string-array name="loading">
        <item tools:ignore="TypographyEllipsis">Loading...</item>
    </string-array>

    <string-array name="team_name">
        <item>All</item>
        <item>Business Development Executive</item>
        <item>Business Development Manager</item>
        <item>IT Team</item>
    </string-array>


</resources>