<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignedMeetingsDescription">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/meetingDetails"
        android:id="@+id/meeting_details_head"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:textStyle="bold">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/meeting_details_head">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_org"
                android:id="@+id/lead_org_text"
                android:textColor="@color/dark_grey"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_org_address"
                android:layout_below="@id/lead_org_text"
                android:id="@+id/lead_org_address"
                android:textColor="@color/dark_grey"
                android:layout_marginStart="10dp"
                android:textSize="17sp">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/lead_details_card"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/lead_org_address">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/extra_light_grey">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/name_icon"
                        android:src="@drawable/ic_name_color"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/lead_name_text"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/lead_name"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/name_icon">

                    </TextView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/email_icon"
                        android:layout_below="@id/name_icon"
                        android:src="@drawable/ic_email"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:layout_below="@id/lead_name_text"
                        android:id="@+id/lead_email_text"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/lead_email"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/email_icon">

                    </TextView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/phone_icon"
                        android:layout_below="@id/email_icon"
                        android:src="@drawable/ic_phone_color"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/lead_phone_text"
                        android:layout_below="@id/lead_email_text"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/lead_phone"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/phone_icon">

                    </TextView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/date_time"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/lead_details_card">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/extra_light_grey">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/date_icon"
                        android:src="@drawable/ic_date"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/d_date_text"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/meetingDate"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/date_icon">

                    </TextView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/time_icon"
                        android:layout_below="@id/date_icon"
                        android:src="@drawable/ic_time"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:layout_below="@id/d_date_text"
                        android:id="@+id/d_time_text"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/meetingTime"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/time_icon">

                    </TextView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/silver"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/part_two"
                android:layout_below="@id/date_time"
                android:layout_marginTop="10dp">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assignedBDM"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:id="@+id/bdm_assigned"
                android:textColor="@color/dark_grey"
                android:layout_below="@id/part_two"
                android:layout_marginTop="10dp"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bdm_name"
                android:textColor="@color/dark_grey"
                android:textSize="30sp"
                android:layout_below="@id/bdm_assigned"
                android:layout_marginStart="10dp"
                android:id="@+id/bdm_name">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/silver"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/part_three"
                android:layout_below="@id/bdm_name"
                android:layout_marginTop="10dp">

            </View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leadCreatedBy"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:id="@+id/lead_created_by"
                android:textColor="@color/dark_grey"
                android:layout_below="@id/part_three"
                android:layout_marginTop="10dp"
                android:textSize="15sp">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/lead_created_by_card"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/lead_created_by">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/extra_light_grey">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/bde_name_icon"
                        android:src="@drawable/ic_name_color"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/bde_name_text"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/bde_name"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/bde_name_icon">

                    </TextView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/bde_email_icon"
                        android:layout_below="@id/bde_name_icon"
                        android:src="@drawable/ic_email"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:layout_below="@id/bde_name_text"
                        android:id="@+id/bde_email_text"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/bde_email"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/bde_email_icon">

                    </TextView>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/bde_phone_icon"
                        android:layout_below="@id/bde_email_icon"
                        android:src="@drawable/ic_phone_color"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:id="@+id/bde_phone_text"
                        android:layout_below="@id/bde_email_text"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_grey"
                        android:text="@string/bde_phone"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/bde_phone_icon">

                    </TextView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <View

                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/silver"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/part_four"
                android:layout_below="@id/lead_created_by_card"
                android:layout_marginTop="10dp">

            </View>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>