<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/splash">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ambit_regular"
        android:text="@string/welcome"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textSize="15sp">

    </TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ambit_regular"
        android:text="@string/tech_mark"
        android:layout_marginStart="16dp"
        android:layout_below="@id/textView3"
        android:textColor="@color/white"
        android:textSize="25sp">

    </TextView>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo_white"
        android:scaleY="1.1"
        android:transitionName="image"
        android:scaleX="1.1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

    </ImageView>

    <!--<com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:theme="@style/pb"
        android:layout_below="@id/textView4">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ambit_regular"
            android:hint="@string/typename"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/extra_light_grey"
            android:textSize="20sp"
            android:theme="@style/pb">

        </EditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/pb"
        android:layout_below="@id/name_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ambit_regular"
            android:hint="@string/typephone"
            android:inputType="phone"
            android:digits="0123456789"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/extra_light_grey"
            android:textSize="20sp"
            android:theme="@style/pb">

        </EditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/pb"
        android:layout_below="@id/phone_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ambit_regular"
            android:hint="@string/typeemail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/extra_light_grey"
            android:textSize="20sp"
            android:theme="@style/pb">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:theme="@style/pb"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/email_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ambit_regular"
            android:hint="@string/typepass"
            android:inputType="textPassword"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/extra_light_grey"
            android:textSize="20sp"
            android:theme="@style/pb">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next_btn_bg"
        android:textColor="@color/black"
        android:fontFamily="@font/regular"
        android:text="@string/next"
        android:textAllCaps="false"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">

    </Button>-->

    <!--<TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ambit_bold"
        android:textAlignment="textStart"
        android:text="@string/mynameis"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.055">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/pb"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/typename"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:inputType="textCapWords"
        android:textColor="@color/white"
        android:fontFamily="@font/ambit_regular"
        android:textColorHint="@color/extra_light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0">

    </EditText>-->

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mynameis"
            android:textSize="17sp"
            android:fontFamily="@font/ambit_bold"
            android:textColor="@color/white">

        </TextView>


    </RelativeLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mynameis"
            android:textSize="20sp"
            android:id="@+id/name_head"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ambit_bold"
            android:textColor="@color/yellow">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_head"
            android:id="@+id/name_et"
            android:textSize="25sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/ambit_regular"
            android:theme="@style/pb"
            android:hint="@string/typename"
            android:textColorHint="@color/extra_light_grey"
            android:textColor="@color/white"
            android:inputType="textCapWords"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myphoneis"
            android:textSize="20sp"
            android:id="@+id/phone_head"
            android:layout_marginStart="16dp"
            android:layout_below="@id/name_et"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ambit_bold"
            android:textColor="@color/yellow">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_head"
            android:textSize="25sp"
            android:id="@+id/phone_et"
            android:fontFamily="@font/ambit_regular"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:theme="@style/pb"
            android:hint="@string/typephone"
            android:textColorHint="@color/extra_light_grey"
            android:textColor="@color/white"
            android:inputType="phone"
            android:digits="0123456789"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myemailis"
            android:textSize="20sp"
            android:id="@+id/email_head"
            android:layout_marginStart="16dp"
            android:layout_below="@id/phone_et"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ambit_bold"
            android:textColor="@color/yellow">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_head"
            android:id="@+id/email_et"
            android:textSize="25sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/ambit_regular"
            android:hint="@string/typeemail"
            android:theme="@style/pb"
            android:textColorHint="@color/extra_light_grey"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypassis"
            android:textSize="20sp"
            android:id="@+id/password_head"
            android:layout_marginStart="16dp"
            android:layout_below="@id/email_et"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ambit_bold"
            android:textColor="@color/yellow">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_head"
            android:id="@+id/password_et"
            android:textSize="25sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:hint="@string/typepass"
            android:fontFamily="@font/ambit_regular"
            android:theme="@style/pb"
            android:textColorHint="@color/extra_light_grey"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        </EditText>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showpass"
            android:theme="@style/pb"
            android:textColor="@color/white"
            android:id="@+id/show_pass_checkbox"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ambit_regular"
            android:layout_below="@id/password_et"
            android:layout_centerHorizontal="true">

        </CheckBox>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@drawable/next_btn_bg"
            android:textAllCaps="false"
            android:drawablePadding="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/show_pass_checkbox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_forward"
            android:fontFamily="@font/ambit_regular">

        </Button>

    </RelativeLayout>



</RelativeLayout>